Fix align items navbar logo & text color on navbar

--- a/assets/style.css
+++ b/assets/style.css
@@ -759,6 +759,10 @@ video {
   max-height: 250px;
 }
 
+.max-h-screen {
+  max-height: 100vh;
+}
+
 .min-h-\[800px\] {
   min-height: 800px;
 }
